deploy/k8s/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-analytics-api
  labels:
    app: weather-analytics-api
spec:
  type: ClusterIP
  selector:
    app: weather-analytics-api
  ports:
    - name: http
      port: 8000
      targetPort: http
